fer-de-lance/tests/negative/duplicate_binding.snek
(let* ((x 5) (x 10))
		(add1 x)
		)
